@@ -1,0 +1,57 @@
+#
+# Check that an XDMCP session doesn't have any unknown file descriptors
+#
+
+[LightDM]
+start-default-seat=false
+minimum-display-number=50
+
+[XDMCPServer]
+enabled=true
+port=9999
+
+#?RUNNER DAEMON-START
+#?*WAIT 1
+
+# Start a remote X server to log in with XDMCP
+#?*START-XSERVER ARGS=":98 -query localhost -port 9999 -nolisten unix"
+#?XSERVER :98 START
+#?XSERVER :98 SEND-QUERY
+
+# Negotiate with daemon
+#?XSERVER :98 GOT-WILLING AUTHENTICATION-NAME="" HOSTNAME="" STATUS=""
+#?XSERVER :98 SEND-REQUEST DISPLAY-NUMBER=98 AUTHORIZATION-NAME="MIT-MAGIC-COOKIE-1" MFID="TEST XSERVER"
+#?XSERVER :98 GOT-ACCEPT SESSION-ID=[0-9]* AUTHENTICATION-NAME="" AUTHORIZATION-NAME="MIT-MAGIC-COOKIE-1"
+#?XSERVER :98 SEND-MANAGE SESSION-ID=[0-9]* DISPLAY-NUMBER=98 DISPLAY-CLASS="DISPLAY CLASS"
+
+# LightDM connects to X server
+#?XSERVER :98 TCP-ACCEPT-CONNECT
+
+# Greeter starts and connects to remote X server
+#?GREETER 127.0.0.1:98 START
+#?XSERVER :98 TCP-ACCEPT-CONNECT
+#?GREETER 127.0.0.1:98 CONNECT-XSERVER
+#?GREETER 127.0.0.1:98 CONNECT-TO-DAEMON
+#?GREETER 127.0.0.1:98 CONNECTED-TO-DAEMON
+
+# Log in
+#?*GREETER 127.0.0.1:98 AUTHENTICATE USERNAME=have-password1
+#?GREETER 127.0.0.1:98 SHOW-PROMPT TEXT="Password:"
+#?*GREETER 127.0.0.1:98 RESPOND TEXT="password"
+#?GREETER 127.0.0.1:98 AUTHENTICATION-COMPLETE USERNAME=have-password1 AUTHENTICATED=TRUE
+#?*GREETER 127.0.0.1:98 START-SESSION
+#?GREETER 127.0.0.1:98 TERMINATE SIGNAL=15
+
+# Session starts
+#?SESSION 127.0.0.1:98 START USER=have-password1
+#?XSERVER :98 TCP-ACCEPT-CONNECT
+#?SESSION 127.0.0.1:98 CONNECT-XSERVER
+
+# Check file descriptors
+#?*SESSION 127.0.0.1:98 LIST-UNKNOWN-FILE-DESCRIPTORS
+#?SESSION 127.0.0.1:98 LIST-UNKNOWN-FILE-DESCRIPTORS FDS=
+
+# Clean up
+#?*STOP-DAEMON
+#?SESSION 127.0.0.1:98 TERMINATE SIGNAL=15
+#?RUNNER DAEMON-EXIT STATUS=0
