@@ -4,6 +4,7 @@
 #include <pwd.h>
 #include <security/pam_appl.h>
 #include <unistd.h>
+#include <fcntl.h>
 #define __USE_GNU
 #include <dlfcn.h>
 #ifdef __linux__
@@ -59,19 +60,31 @@ setuid (uid_t uid)
 
 #ifdef __linux__
 int
-open (const char *pathname, int flags, mode_t mode)
+open (const char *pathname, int flags, ...)
 {
     int (*_open) (const char * pathname, int flags, mode_t mode);
+    int mode = 0;
+  
+    if (flags & O_CREAT)
+    {
+        va_list ap;
+        va_start (ap, flags);
+        mode = va_arg (ap, int);
+        va_end (ap);
+    }
 
     _open = (int (*)(const char * pathname, int flags, mode_t mode)) dlsym (RTLD_NEXT, "open");      
     if (strcmp (pathname, "/dev/console") == 0)
     {
         if (console_fd < 0)
-            console_fd = _open ("/dev/null", 0, 0);
+        {
+            console_fd = _open ("/dev/null", flags, mode);
+            fcntl (console_fd, F_SETFD, FD_CLOEXEC);
+        }
         return console_fd;
     }
     else
-        return _open(pathname, flags, mode);
+        return _open (pathname, flags, mode);
 }
 
 int
