@@ -4,6 +4,7 @@
 #include <signal.h>
 #include <sys/types.h>
 #include <unistd.h>
+#include <fcntl.h>
 #include <xcb/xcb.h>
 #include <glib.h>
 #include <glib-object.h>
@@ -11,7 +12,11 @@
 
 #include "status.h"
 
+static GString *open_fds;
+
 static GKeyFile *config;
+
+static xcb_connection_t *connection;
 
 static void
 quit_cb (int signum)
@@ -103,13 +108,28 @@ request_cb (const gchar *request)
         g_clear_error (&error);
     }
     g_free (r);
+
+    r = g_strdup_printf ("SESSION %s LIST-UNKNOWN-FILE-DESCRIPTORS", getenv ("DISPLAY"));
+    if (strcmp (request, r) == 0)
+        status_notify ("SESSION %s LIST-UNKNOWN-FILE-DESCRIPTORS FDS=%s", getenv ("DISPLAY"), open_fds->str);
+    g_free (r);
 }
 
 int
 main (int argc, char **argv)
 {
     GMainLoop *loop;
-    xcb_connection_t *connection;
+    int fd, open_max;
+
+    open_fds = g_string_new ("");
+    open_max = sysconf (_SC_OPEN_MAX);
+    for (fd = STDERR_FILENO + 1; fd < open_max; fd++)
+    {
+        if (fcntl (fd, F_GETFD) >= 0)
+            g_string_append_printf (open_fds, "%d,", fd);
+    }
+    if (g_str_has_suffix (open_fds->str, ","))
+        open_fds->str[strlen (open_fds->str) - 1] = '\0';
 
     signal (SIGINT, quit_cb);
     signal (SIGTERM, quit_cb);
