@@ -1,0 +1,2 @@
+#!/bin/sh
+./src/dbus-env ./src/test-runner xdmcp-open-file-descriptors test-gobject-greeter
